# Embedded-Project

./: CMakeLists.txt  FreeRTOSConfig.h  LCD_Driver.c  README.md  btstack_config.h  gyroscope.c  infrared_sensor.c  led.c  led.h  main.c  motor_driver.c  motor_driver.h  ultrasonic_driver.c  ultrasonic_driver.h
drivers/: LCD_Driver.c  LCD_Driver.h  MPU6050.c  MPU6050.h  bluetooth_module.c  bluetooth_module.h  gyroscope.c  infrared_sensor.c  infrared_sensor.h  led.h  motor_driver.c  ultrasonic_driver.c
src/: main.c
